# Quail-Engine

./: .gitignore  CMakeLists.txt  Quail Engine.sln  README.md  vcpkg.json
Quail Engine/: Camera.cpp  Camera.h  Debug.h  GLHeaders.h  GameObject.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  MaterialProperty.h  Mesh.cpp  Mesh.h  Plane.h  Quail Engine.vcxproj  Quail Engine.vcxproj.filters  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneObject.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Utils.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h  imgui.ini  main.cpp
Quail Engine/Assets/Shaders/: basicFragment.glsl  basicVertex.glsl
Quail Engine/Dependencies/glad/glad/: glad.h
Quail Engine/Examples/Demo1/: ExampleGame.cpp  ExampleGame.h
Quail Engine/Examples/Demo2/: Demo2.cpp  Demo2.h
Quail Engine/Examples/VRDemo/: VRDemo.cpp  VRDemo.h
Quail Engine/Shaders/: basicFragment.glsl  basicVertex.glsl
Quail Engine/src/: glad.c  imgui.ini  main.cpp
Quail Engine/src/Engine/: Behaviour.cpp  Behaviour.h  Console.cpp  Console.h  Engine.cpp  Engine.h  Game.h  GameTime.h  Input.h  Key.h  OpenVRApplication.cpp  OpenVRApplication.h
Quail Engine/src/Rendering/: DesktopRenderer.cpp  DesktopRenderer.h  FrameBuffer.cpp  FrameBuffer.h  GLHeaders.h  IndexBuffer.cpp  IndexBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialProperty.h  Mesh.cpp  Mesh.h  OpenVRRenderer.cpp  OpenVRRenderer.h  RenderBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Quail Engine/src/Resources/: Resources.cpp  Resources.h
Quail Engine/src/Resources/Shaders/: basicFragment.glsl  basicVertex.glsl  screenFrag.glsl  screenVert.glsl  skyboxFragment.glsl  skyboxVertex.glsl  standardFragment.glsl
Quail Engine/src/Scene/: Camera.cpp  Camera.h  Debug.h  GameObject.h  OVRCamera.cpp  OVRCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
Quail Engine/src/Utils/: EngineUI.h  NoClipController.h  OpenVRApplication.cpp  OpenVRApplication.h  Resources.cpp  Resources.h  RotateBehaviour.h  Utils.h
cmake/: FindOpenVR.cmake
